src/objects/ESSR_Training_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Completed__c</fullName>
        <label>Completed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Status_ID__c</fullName>
        <label>Completion Status ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_Status__c</fullName>
        <label>Completion Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Curriculum_ID__c</fullName>
        <label>Curriculum ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Curriculum_Title__c</fullName>
        <label>Curriculum Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Remaining__c</fullName>
        <label>Days Remaining</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Id__c</fullName>
        <externalId>true</externalId>
        <label>Item Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Title__c</fullName>
        <label>Item Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonnelTracker__c</fullName>
        <label>Personnel Tracker</label>
        <referenceTo>ESSR_Personnel_Tracker__c</referenceTo>
        <relationshipLabel>Training Detail</relationshipLabel>
        <relationshipName>Training_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Revision_Number__c</fullName>
        <label>Revision Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Training Detail</label>
    <nameField>
        <displayFormat>TDN-{0000000}</displayFormat>
        <label>Training Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>